# oci_rust_example

./: Cargo.toml  README.md  my-manifest.json
src/: lib.rs  main.rs  utils.rs
tests/: cli_test.sh  integration_tests.rs
tests/data/: a.tar  annotations.txt  b.tar  env.txt  labels.txt
tests/data/base_oci_dir/: index.json
