[package]
name = "ocitest"
version = "0.1.0"
edition = "2021"

[lib]
name = "liboci"
path = "src/lib.rs"


[[bin]]
name = "mk_oci_from_tars"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }
oci-spec = "0.6.1"
sha2 = "0.10.7"
